--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/flux-pro": "^2.5",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "openai-php/client": "^0.17.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.6",
