build: configure queue worker in supervisor

--- a/deployment/octane/FrankenPHP/supervisord.frankenphp.conf
+++ b/deployment/octane/FrankenPHP/supervisord.frankenphp.conf
@@ -11,15 +11,15 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:horizon]
+[program:queue-worker]
 process_name=%(program_name)s_%(process_num)s
-command=php %(ENV_ROOT)s/artisan horizon
+command=php %(ENV_ROOT)s/artisan queue:work --sleep=3 --tries=3 --timeout=90
 user=%(ENV_USER)s
-autostart=%(ENV_WITH_HORIZON)s
+autostart=true
 autorestart=true
-stdout_logfile=%(ENV_ROOT)s/storage/logs/horizon.log
+stdout_logfile=%(ENV_ROOT)s/storage/logs/queue-worker.log
 stdout_logfile_maxbytes=200MB
-stderr_logfile=%(ENV_ROOT)s/storage/logs/horizon.log
+stderr_logfile=%(ENV_ROOT)s/storage/logs/queue-worker.log
 stderr_logfile_maxbytes=200MB
 stopwaitsecs=3600
 
