--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "$schema": "https://getcomposer.org/schema.json",
     "name": "laravel/livewire-starter-kit",
     "type": "project",
+    "version": "1.0.0",
     "description": "The official Laravel starter kit for Livewire.",
     "keywords": [
         "laravel",
